Relacionado con la incidencia 018299. Lista de cambios: - CuentaControlador: se modifica crearCuenta y añadirCuenta para que se compruebe si ya está disponible una cuenta en el sistema antes de realizar cualquiera de las operaciones. - CuentaExistenteException: se crea esta excepción que representa que se ha creado una nueva cuenta. - AñadirCuentaActionListener: se gestiona la captura de la excepción que informa de que hay una cuenta igual en el sistema. - CrearCuentaActionListener: se gestiona la captura de la excepción que informa de que hay una cuenta igual en el sistema. - Cuentas: se crea un nuevo método, 'isPresente' que informa acerca de si una cuenta está ya en el sistema. Se modifica el método 'buscarCuenta' para que retorne null si no se encuentra dicha cuenta. - Se modifican los ficheros de propiedades para que contengan el error asociado a la existencia de la cuenta.

--- a/trunk/src/resources/Idioma_en.properties
+++ b/trunk/src/resources/Idioma_en.properties
@@ -1,23 +1,23 @@
-# Cadenas del formulario de crear o a\u00F1adir cuenta
-crear_o_a\u00F1adir_formulario_title = Create or add
-crear_o_a\u00F1adir_formulario_cadena_principal = Do you want to create a new account in a server or add registered account?
-crear_o_a\u00F1adir_formulario_primera_opci\u00F3n = Create a new account.
-crear_o_a\u00F1adir_formulario_segunda_opci\u00F3n = Add registered account.
+# Cadenas del formulario de crear o a\u00f1adir cuenta
+crear_o_a\u00f1adir_formulario_title = Create or add
+crear_o_a\u00f1adir_formulario_cadena_principal = Do you want to create a new account in a server or add registered account?
+crear_o_a\u00f1adir_formulario_primera_opci\u00f3n = Create a new account.
+crear_o_a\u00f1adir_formulario_segunda_opci\u00f3n = Add registered account.
 
 # Cadenas del formulario en el que se introducen los datos de las cuentas
 cuenta_formulario_principal = Fill the fields of the form.
 cuenta_formulario_identificador = Login
 cuenta_formulario_servidor = Server
-cuenta_formulario_contrase\u00F1a = Password
-cuenta_formulario_confirmar_contrase\u00F1a = Confirm password
+cuenta_formulario_contrase\u00f1a = Password
+cuenta_formulario_confirmar_contrase\u00f1a = Confirm password
 cuenta_formulario_guardar = Save password
 crear_cuenta_formulario = Create account
-a\u00F1adir_cuenta_formulario = Add account
+a\u00f1adir_cuenta_formulario = Add account
 
-# Cadenas del formulario de introducir contrase\u00F1a
-introducir_contrase\u00F1a_formulario_title = Enter password
-introducir_contrase\u00F1a_formulario_principal = Please, enter the password.
-introducir_contrase\u00F1a_formulario_contrase\u00F1a = Password
+# Cadenas del formulario de introducir contrase\u00f1a
+introducir_contrase\u00f1a_formulario_title = Enter password
+introducir_contrase\u00f1a_formulario_principal = Please, enter the password.
+introducir_contrase\u00f1a_formulario_contrase\u00f1a = Password
 
 # Cadenas del formulario de solicitud de contacto
 solicitud_contacto_formulario_title = Add contact
@@ -65,18 +65,18 @@ aceptar_fichero_formulario_title = Accept file
 aceptar_fichero_formulario_cadena_principal = Fill the fields of the form.
 aceptar_fichero_formulario_ruta = Path
 
-# Cadenas del formulario de modificar contrase\u00F1a
-modificar_contrase\u00F1a_formulario_title = Change password
-modificar_contrase\u00F1a_formulario_principal = Fill the fields of the form.
-modificar_contrase\u00F1a_formulario_contrase\u00F1a = Password
-modificar_contrase\u00F1a_formulario_repetir_contrase\u00F1a = Confirm password
-modificar_contrase\u00F1a_formulario_guardar_contrase\u00F1a = Save password
+# Cadenas del formulario de modificar contrase\u00f1a
+modificar_contrase\u00f1a_formulario_title = Change password
+modificar_contrase\u00f1a_formulario_principal = Fill the fields of the form.
+modificar_contrase\u00f1a_formulario_contrase\u00f1a = Password
+modificar_contrase\u00f1a_formulario_repetir_contrase\u00f1a = Confirm password
+modificar_contrase\u00f1a_formulario_guardar_contrase\u00f1a = Save password
 
-# Cadenas del formulario de petici\u00F3n rechazada
+# Cadenas del formulario de petici\u00f3n rechazada
 peticion_rechazada_formulario_title = Contact refused
 peticion_rechazada_formulario_cadena_principal = reject contact with you.
 
-# Cadenas del formulario de b\u00FAsqueda de contactos
+# Cadenas del formulario de b\u00fasqueda de contactos
 buscar_contacto_formulario_title = Search contact
 buscar_contacto_formulario_principal = Enter the information that want search.
 buscar_contacto_formulario_cadena = Text
@@ -84,24 +84,24 @@ buscar_contacto_formulario_servidor = Server
 buscar_contacto_formulario_resultados = Match
 buscar_contacto_formulario_buscar = Search
 
-# Cadenas del formulario de creaci\u00F3n de grupo de contactos
+# Cadenas del formulario de creaci\u00f3n de grupo de contactos
 crear_grupo_de_contactos_formulario_title = Create group
 crear_grupo_de_contactos_formulario_principal = Fill the fields of the form.
 crear_grupo_de_contactos_formulario_nombre = Name
 crear_grupo_de_contactos_formulario_contactos = Contacts
 
-# Cadenas del formulario de modificaci\u00F3n de grupo de contactos
+# Cadenas del formulario de modificaci\u00f3n de grupo de contactos
 modificar_grupo_de_contactos_formulario_title = Edit group
 modificar_grupo_de_contactos_formulario_principal = Fill the fields of the form.
 modificar_grupo_de_contactos_formulario_nombre = Name
 
-# Cadenas del formulario de adici\u00F3n de un contacto a varios grupos
-a\u00F1adir_contacto_a_grupo_formulario_title = Add contact to group
-a\u00F1adir_contacto_a_grupo_formulario_principal = Check the groups.
-a\u00F1adir_contacto_a_grupo_formulario_grupos = Groups
-a\u00F1adir_contacto_a_grupo_formulario_sin_grupos = There are not groups availables.
+# Cadenas del formulario de adici\u00f3n de un contacto a varios grupos
+a\u00f1adir_contacto_a_grupo_formulario_title = Add contact to group
+a\u00f1adir_contacto_a_grupo_formulario_principal = Check the groups.
+a\u00f1adir_contacto_a_grupo_formulario_grupos = Groups
+a\u00f1adir_contacto_a_grupo_formulario_sin_grupos = There are not groups availables.
 
-# Cadenas del formulario de aceptar o rechazar conversaci\u00F3n
+# Cadenas del formulario de aceptar o rechazar conversaci\u00f3n
 aceptar_conversacion_formulario_cadena_title = Accept o reject the conversation
 aceptar_conversacion_formulario_cadena_principal = want chat with you.
 aceptar_conversacion_formulario_cadena = Accept
@@ -113,7 +113,7 @@ iniciar_chat_multiusuario_formulario_principal = Fill the fields of the form
 iniciar_chat_multiusuario_formulario_sala = Room
 iniciar_chat_multiusuario_formulario_nickname = Nickname
 
-# Cadenas del formulario de invitaci\u00F3n de usuarios
+# Cadenas del formulario de invitaci\u00f3n de usuarios
 invitar_contacto_formulario_title = Invite contacts
 invitar_contacto_formulario_principal = Select the contacts
 invitar_contacto_formulario_contactos = Contacts
@@ -125,13 +125,13 @@ vetar_contacto_formulario_principal = Select the contacts.
 vetar_contacto_formulario_contactos = Contacts
 vetar_contacto_formulario_sin_contactos = There are not contacts availables.
 
-# Cadenas del formulario para guardar una conversaci\u00F3n
+# Cadenas del formulario para guardar una conversaci\u00f3n
 guardar_conversacion_formulario_title = Save conversation
 guardar_conversacion_formulario_principal = Fill the fields of the form.
 guardar_conversacion_formulario_ruta = Path
 guardar_conversacion_formulario_nombre = Name
 
-# Cadenas del formulario para aceptar o rechazar una invitaci\u00F3n
+# Cadenas del formulario para aceptar o rechazar una invitaci\u00f3n
 aceptar_o_rechazar_invitacion_formulario_title = Accept o reject the invitation
 aceptar_o_rechazar_invitacion_formulario_cadena_principal = invite you to the room
 aceptar_invitacion_formulario_cadena = Accept
@@ -147,23 +147,23 @@ renombrar_fichero_formulario_title = Rename file
 renombrar_fichero_formulario_principal = Fill the fields of the form.
 renombrar_fichero_formulario_nombre = Name
 
-# Cadenas del formulario para la reubicaci\u00F3n de ficheros descargados.
+# Cadenas del formulario para la reubicaci\u00f3n de ficheros descargados.
 reubicar_fichero_formulario_title = Move file
 reubicar_fichero_formulario_principal = Fill the fields of the form.
 reubicar_fichero_formulario_ruta = Path
 
-# Cadenas del formulario de selecci\u00F3n de fuente
+# Cadenas del formulario de selecci\u00f3n de fuente
 fuente_formulario_title = Fonts
 fuente_formulario_principal = Choose your font.
 fuente_formulario_fuente = Font
-fuente_formulario_tama\u00F1o = Size
+fuente_formulario_tama\u00f1o = Size
 fuente_formulario_prueba = Test
 fuente_formulario_texto_prueba = Hello world
 
-# Cadenas del formulario de selecci\u00F3n de colores
+# Cadenas del formulario de selecci\u00f3n de colores
 color_formulario_title = Colors
 
-# Cadenas del formulario de informaci\u00F3n de la aplicaci\u00F3n
+# Cadenas del formulario de informaci\u00f3n de la aplicaci\u00f3n
 acerca_de_formulario_title = About
 acerca_de_formulario_version = Version
 acerca_de_formulario_autor = Author
@@ -174,23 +174,23 @@ mensaje_error = ERROR
 servidor_no_encontrado_error = Server is not available.
 imposible_crear_cuenta_error = Create account is not possible. Try to use other login.
 cuenta_no_valida = Invalid account. Check the fields of form.
-no_login_error = Can\u00B4t login with the server.
+no_login_error = Can\u00b4t login with the server.
 imposible_solicitar_contacto_error = Add contact is not possible.
 imposible_enviar_mensaje_error = Send message is not possible.
-imposible_a\u00F1adir_contacto_error = Add contact is not possible.
+imposible_a\u00f1adir_contacto_error = Add contact is not possible.
 fichero_no_encontrado_error = File not found.
 imposible_enviar_fichero_error = System can not send the file.
 ruta_no_disponible_error = Directory don't exists.
 imposible_recibir_fichero_error = Receive file is not possible.
 confirmacion_no_valida_error = Invalid password.
-imposible_modificar_contrase\u00F1a_error = Change password is not possible.
+imposible_modificar_contrase\u00f1a_error = Change password is not possible.
 imposible_eliminar_cuenta_error = Delete account is not possible.
 campos_invalidos_error = Content of some field is invalid.
 no_hay_cuenta_error = There are not counts in system.
 imposible_eliminar_contacto = Delete contact is not possible.
 servicio_busqueda_no_encontrado = User search is not enabled.
 imposible_realizar_busqueda = User search is not possible.
-imposible_a\u00F1adir_contacto_a_grupo = Add contact to group is not possible.
+imposible_a\u00f1adir_contacto_a_grupo = Add contact to group is not possible.
 imposible_eliminar_contacto_de_grupo = Delete contacto is not possible.
 servicio_chat_multiusuairo_no_encontrado = Multiuset chat is not available.
 imposible_crear_chat_multiusuario_error = Create multiuser chat is not possible.
@@ -204,6 +204,7 @@ imposible_borrar_fichero_error = Delete file is not possible.
 imposible_renombrar_fichero_error = Rename file is not possible.
 imposible_reubicar_fichero_error = Move file is not possible.
 imposible_recuperar_ayuda_error = Load help is not possible.
+cuenta_existente_error = Account already belongs to the system.
 
 # Cadenas con texto de la ventana principal
 contactos_etiqueta = Roster
@@ -214,8 +215,8 @@ estado_menu = State
 conectar_item_menu = Connect
 desconectar_item_menu = Disconnect
 crear_grupo_item_menu = Create group
-a\u00F1adir_contacto_item_menu = Add contact
-modificar_contrase\u00F1a_item_menu = Change password
+a\u00f1adir_contacto_item_menu = Add contact
+modificar_contrase\u00f1a_item_menu = Change password
 buscar_contacto_item_menu = Search contact
 restaurar_item_menu = Restore
 salir_item_menu = Exit
@@ -231,7 +232,7 @@ eliminar_contacto_item_menu = Delete contact
 eliminar_grupo_item_menu = Delete group
 sin_nombre = Unnamed
 modificar_grupo_item_menu = Edit group
-a\u00F1adir_contacto_a_grupo_item_menu = Add contact to group
+a\u00f1adir_contacto_a_grupo_item_menu = Add contact to group
 eliminar_contacto_de_grupo_item_menu = Delete contact of group
 chat_privado_item_menu = Private chat
 chat_multiusuario_item_menu = Multiuser chat
@@ -239,14 +240,14 @@ ayuda_menu = Help
 ayuda_item_menu = Help contents
 acerca_de_item_menu = About
 
-# Cadenas de la ventana de una conversaci\u00F3n
+# Cadenas de la ventana de una conversaci\u00f3n
 conversacion_etiqueta_principal = Conversation
 conversacion_enviar = Send
 enviar_fichero_item_menu = Send file
 invitar_contacto_item_menu = Invite contact
 vetar_contacto_item_menu = Ban contact
 guardar_conversacion_item = Save conversation
-a\u00F1adir_participante_evento = join to the room.
+a\u00f1adir_participante_evento = join to the room.
 rechazo_invitacion_evento = reject the invitation.
 participante_desconectado_evento = exit to the room.
 fuente_item_estilo = Font
@@ -256,8 +257,8 @@ cursiva_item_estilo = Italic
 
 # Cadenas con el texto del gestor de transferencias
 gestor_de_transferencias_title = Transfer manager
-gestor_de_transferencias_pesta\u00F1a_descargados = Files downloaded
-gestor_de_transferencias_pesta\u00F1a_desgargando = Progress of transfers
+gestor_de_transferencias_pesta\u00f1a_descargados = Files downloaded
+gestor_de_transferencias_pesta\u00f1a_desgargando = Progress of transfers
 gestor_de_transferencias_sin_transferencias_pendientes = There isn't incoming trasnfer.
 gestor_de_transferencias_iconos_visualizar_fichero = Open file
 gestor_de_transferencias_iconos_borrar_fichero = Delete file
@@ -273,12 +274,12 @@ gestor_de_cuentas_informacion_principal = Account information
 gestor_de_cuentas_boton_activar = Activate account
 gestor_de_cuentas_identificador = Login:
 gestor_de_cuentas_servidor = Server:
-gestor_de_cuentas_guardada_contrase\u00F1a = Password saved:
-gestor_de_cuentas_boton_a\u00F1adir = Add account
+gestor_de_cuentas_guardada_contrase\u00f1a = Password saved:
+gestor_de_cuentas_boton_a\u00f1adir = Add account
 gestor_de_cuentas_boton_eliminar_sistema = Delete of system
 gestor_de_cuentas_boton_eliminar_servidor = Delete of server
 
-# Cadenas con el texto de abortar conexi\u00F3n
+# Cadenas con el texto de abortar conexi\u00f3n
 abortar_conexion_dialogo_principal = This operation abort the connection. Are you sure?
 abortar_conexion_dialogo_title = Abort connection
 
@@ -299,7 +300,7 @@ ventana_ayuda_title = Help
 unavailable_estado = Unavailable
 available_estado = Available
 
-# Cadenas con el texto de botones gen\u00E9ricos
+# Cadenas con el texto de botones gen\u00e9ricos
 ok = OK
 cancelar = Cancel
 cerrar = Close
@@ -308,7 +309,7 @@ cerrar = Close
 true = Yes
 false = No
 
-# Eventos de la conexi\u00F3n
+# Eventos de la conexi\u00f3n
 peticion_de_suscripcion_evento = </div><div align="center"> want to contact with you.</div></html>
 confirmacion_de_suscripcion_evento = </div> <div align="center"> has accept to contact with you.</div></html>
 denegacion_de_suscripcion_evento = </div> <div align="center"> reject contact with you.</div></html>
