Se añaden propiedades que permiten informar de cuando un usuario se ha conectado y cuando se ha desconectado.

--- a/trunk/src/resources/Idioma_en.properties
+++ b/trunk/src/resources/Idioma_en.properties
@@ -250,6 +250,8 @@ guardar_conversacion_item = Save conversation
 a\u00f1adir_participante_evento = join to the room.
 rechazo_invitacion_evento = reject the invitation.
 participante_desconectado_evento = exit to the room.
+usuario_conectado_evento_conversacion = is online.
+usuario_desconectado_evento_conversacion = is offline.
 fuente_item_estilo = Font
 color_item_estilo = Color
 negrita_item_estilo = Bold
