--- a/trunk/src/resources/Idioma_es.properties
+++ b/trunk/src/resources/Idioma_es.properties
@@ -250,6 +250,8 @@ guardar_conversacion_item = Guardar conversacion
 a\u00f1adir_participante_evento = se ha unido a la sala.
 rechazo_invitacion_evento = rechaza la invitaci\u00f3n.
 participante_desconectado_evento = ha salido de la sala.
+usuario_conectado_evento_conversacion = est\u00e1 conectado ahora.
+usuario_desconectado_evento_conversacion = se ha desconectado.
 fuente_item_estilo = Fuente
 color_item_estilo = Color
 negrita_item_estilo = Negrita
